# FoodTrack

./: .env.example  .gitignore  CHANGELOG  Makefile  README.md  pyproject.toml  requirements.txt  shoot.py
research/llm_intake_estimation/: plan.md  scraper.py
research/llm_intake_estimation/data/processed/: scraped_data_with_LLM_friendly_name.csv  scraped_data_with_gpt_estimated_contents.csv
research/llm_intake_estimation/data/raw/: Basic Processed Foods.csv  Beverages.csv  Composite Dishes.csv  Highly Processed Foods.csv  Minimally Processed Foods.csv  Moderately Processed Foods.csv  Raw Ingredients.csv  Specialty Foods.csv
research/llm_intake_estimation/notebooks/: 01_scrape_products_data.ipynb  02_postprocess_scraped_data.ipynb  03_generate_estimated_contents.ipynb  04_results_analysis.ipynb
src/: main.py
src/app/: app.py  utils.py
src/configs/: app_config.py
src/core/: exceptions.py
src/core/controllers/: register_product.py
src/core/entities/: intake.py  product.py
src/core/interactors/: register_product.py
src/core/repositories/: intake_repository.py  product_repository.py
src/core/services/: image_recognition.py
src/core/use_cases/: fetch_product_from_repository.py  fetch_products_for_autocompletion.py  get_daily_sum_of_intakes.py  read_nutriments_from_photo.py  register_intake.py  register_intake_by_name.py  register_product_by_barcode.py  register_product_by_name.py  register_product_in_repository.py  retrieve_sum_of_daily_intakes_for_analytics.py
src/database/: database.py  utils.py
src/deployment/ngrok/: service.py
src/di/: container.py
src/frontend/: index.html
src/frontend/css/: error-popup.css  spinner.css  styles.css
src/frontend/js/: api.js  errorHandler.js  main.js
src/impl/repositories/: dummy_product_repository.py
src/impl/services/: dummy_image_recognition.py
src/intake/: base.py  utils.py
src/products/: base.py  scraper.py
src/rest_api/: api.py
src/rest_api/endpoints/: autocomplete.py
src/rest_api/middleware/: error_handler.py
src/rest_api/models/: intake.py  product.py
src/rest_api/routes/: intake.py  product.py
src22/adapters/repositories/: intake_repository.py  product_repository.py
src22/adapters/services/: barcode_service.py  web_service.py
src22/core/: exceptions.py
src22/core/use_cases/: fetch_product.py  register_intake.py  register_product.py
src22/rest_api/: api.py
tasks/: install_dependencies.sh  install_dependencies_pdm.sh  install_dependencies_pip.sh  setup_folders.sh
(+37 files in other folders)
