[project]
name = "FoodTrack"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "szafrix", email = "bartosz.szafranski1@gmail.com"},
]
dependencies = [
    "requests>=2.32.3",
    "streamlit>=1.38.0",
    "flask>=3.0.3",
    "dependency-injector>=4.42.0",
    "pydantic-settings>=2.5.2",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "ipykernel>=6.29.5",
    "tqdm>=4.66.5",
    "openai>=1.48.0",
    "matplotlib>=3.9.2",
    "seaborn>=0.13.2",
    "scipy>=1.14.1",
]
tqdm = []
