[project]
name = "FoodTrack"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "szafrix", email = "bartosz.szafranski1@gmail.com"},
]
dependencies = [
    "requests==2.32.3",
    "dependency-injector==4.42.0",
    "pydantic-settings==2.5.2",
    "fastapi==0.115.0",
    "uvicorn==0.31.0",
    "ngrok==1.4.0",
    "openai==1.51.0",
    "pandas==2.2.3",
    "python-multipart==0.0.17",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "ipykernel==6.29.5",
    "tqdm==4.66.5",
    "matplotlib==3.9.2",
    "seaborn==0.13.2",
    "scipy==1.14.1",
]
tqdm = []
